1999-11-04  Hippo

	* libs/Target.c: new function fvwmlib_client_window() to replace
	XMUClientWindow()
	* fvwm/addwindow.c: reordered stacking of client in frame so that
	fvwmib_client_window finds the client faster.

1999-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (...):
	menus can now be 'posted' by clicking on their invoking item so that
	they stay up when the mouse moves somehwere else.

1999-11-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle):
	fixed height in MaxWindowSize style

1999-11-04  Mikhael Goikhman  migo@homemail.com

	* fvwm/cursor.c (CursorStyle): don't reset the root cursor
	on CursorStyle "non-root"

1999-11-03  Hippo

	* libs/Colorset.h: removed global nColorsets

1999-11-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupFrame):
	fixed page switching with shaded XEmacs

	* fvwm/windowlist.c (do_windowList):
	* fvwm/menus.c (MenuInteraction):
	(menu_func):
	* fvwm/menus.h (MenuParameters):
	* fvwm/menus.c (...):
	* fvwm/windowlist.c (do_windowList):
	rewrote return code use a return struct instead of an integer;
	improved double-clicking on menus without a title

1999-11-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (ExecuteFunction):
	no error message when empty command is encountered

	* fvwm/session.c (MatchWinToSM):
	* fvwm/module_interface.c:
	* fvwm/builtins.c:
	-Wall fixes

	* fvwm/fvwm2.1: clarified default action with "Menu" and "Popup"

1999-11-01  Mikhael Goikhman  migo@homemail.com

	* NEWS: a note about the new default root cursor
	* fvwm/fvwm2.1:
	* fvwm/cursor.c (setBusyCursor):
	'BusyCursor *' addition by Ben Winslow, some clean up.

1999-10-30  Olivier Chapuis  olivier.chapuis@free.fr

	* NEWS: BusyCursor, EscapeFunc and CursorStyle.
	* fvwm/ConfigFvwmDefaults: add the binding Key Escape A MC EscapeFunc
	* fvwm/builtins.c (wait_func, recapture): Busy cursor stuff
	* fvwm/cursor.{c,h} (cursor_type, default_cursors, CursorStyle,