@@ -1,8 +1,13 @@
+1999-11-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/windowlist.c (do_windowList):
+	enhanced window list spacing
+
 1999-11-04  Hippo
 
 	* libs/Target.c: new function fvwmlib_client_window() to replace
 	XMUClientWindow()
-	* fvwm/addwindow.c: reordered stacking of client in frame so that
+	* fvwm/add_window.c: reordered stacking of client in frame so that
 	fvwmib_client_window finds the client faster.
 
 1999-11-04  Dominik Vogt  <dominik.vogt@gmx.de>
